syntax = "proto3";
option go_package = "../models";
package models;


message Request {
  string Token = 1;
  string Issuer = 2;
  bool  IgnoreExpiration = 3;
  string URL = 4;
}

message TokenClaim {
  string TokenId = 1;
  string IssuedAt = 2;
  string UserId = 3;
  string Phone = 4;
  string RefreshVersion = 5;
  string EulaVersion = 6;
  string Issuer = 7;
  string LifeTime = 8;
  string AccessVersion = 9;
  string DeviceId = 10;
  string AppSource = 11;
  repeated string Roles = 12;
  string Audience = 13;
  string Expires = 14;
  string NotBefore = 15;
  string CallBackId = 16;
  string SessionId = 17;
}

message Response {
  int64 code =1;
  TokenClaim tokenClaims=2;
}

service Authorizer {
  rpc Authorize (Request) returns (Response){};
}